index.css
* {
	box-sizing: border-box;
}
html {
	height: 100%;
	min-height: 100%;
	background: #f5f0e6;
}
body {
	color: #2a2a2a;
	background: #f5f5f5;
	font-family: -apple-system, BlinkMacSystemFont,
	    "Segoe UI", "Roboto", "Oxygen",
	    "Ubuntu", "Cantarell", "Fira Sans",
	    "Droid Sans", "Helvetica Neue", sans-serif;
	font-size: 14px;
	line-height: 20px;
	height: 100%;
	min-height: 100%;
	font-weight: 300;
}
h1 {
	text-align: center;
	font-weight: 700;
	font-size: 14px;
	margin: 0;
	padding: .25em 0 0 0;
}
p {
	padding: 0;
}
a,
a:link,
a:visited,
a:hover,
a:active {
	text-decoration: none;
	color: inherit;
}
.octicon {
	fill: currentcolor;
}
.article-wrapper {
	float: left;
	border-right: 1px solid #4a4a4a;
	height: 100%;
	max-height: 100%;
	width: 28em;
	overflow: hidden;
	position: relative;
	z-index: 2;
}
article {
	height: 100%;
	display: flex;
	flex-direction: column;
	width: 100%;
}
section {
	flex: 1;
	flex-shrink: 0;
}
section.config {
	min-height: 30px;
	font-size: 10px;
	background: #eee;
	flex: 0;
	padding: 10px 10px 0 10px;
	display: flex;
	flex-direction: row;
}
section.config:last-of-type {
	padding-bottom: 10px;
}
section.config + section.config {
	padding-top: 0;
}
section.config > * {
	flex: 1;
	text-align: center;
	padding: 0;
}
section.select-list {
	overflow: auto;
}
section.select-list .entry {
	position: relative;
	display: block;
	padding: .5em 1em;
}
section.select-list .entry:hover {
	background: #fff;
}
section.select-list a[data-value] {
	display: block;
	position: relative;
	overflow: hidden;
}
section.select-list a:hover .name,
section.select-list a:active .name {
	text-decoration: underline;
}
section.select-list .active .name {
	font-weight: bold;
}
section.select-list a.website {
	position: absolute;
	top: 5px;
	right: 20px;
	opacity: 0;
	transition: all .2s ease-in-out;
	font-size: 10px;
	padding: 2px 1ex;
}
section.select-list a.website span {
	display: inline-block;
	padding-right: 1ex;
}
section.select-list .entry:hover a.website {
	color: #e4e4e4;
	opacity: 1;
}
section.select-list .entry .active + a.website,
section.select-list .entry .active + a.website,
section.select-list .entry a.website:hover,
section.select-list .entry a.website:active {
	background: #e4e4e4;
	color: #777;
	opacity: 1;
}
section.select-list a.website:active {
	margin-top: 1px;
}
section.select-list .details {
	color: #777;
	font-style: italic;
	display: block;
	font-size: 10px;
	text-indent: 2em;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}
footer {
	flex: 0;
	padding: 10px 0;
	text-align: center;
	font-size: 10px;
	background: #e4e4e4;
	color: #777;
}
footer h1 + p {
	font-style: italic;
}
footer a:hover,
footer a:active {
	text-decoration: underline;
}
label {
	margin-right: .5ex;
	font-style: italic;
	color: #777;
}
select {
	all: unset;
	width: 9em;
	padding: 0 .5ex;
	border: 1px solid transparent;
	border-radius: 3px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	cursor: pointer;
}
select option {
	background: #fff;
	color: #000;
}
input[type="number"] {
	all: unset;
	width: 4em;
	margin-left: .5ex;
	padding: 0 .5ex;
	border: 1px solid transparent;
	text-align: left;
}
input[type="number"]:hover,
input[type="number"]:focus,
select:hover,
select:focus {
	border-color: #e4e4e4;
}
pre,
textarea,
.CodeMirror {
	font-family: "Input Mono", monospace;
	height: auto;
}
form {
	height: 100%;
	min-height: 100%;
	position: relative;
	z-index: 1;
}
.nav-button {
	all: unset;
	font-family: inherit;
	cursor: pointer;
}
label + .nav-button {
	margin-left: .5ex;
}
label[for="select-language"],
label[for="select-theme"] {
	display: none;
}
.CodeMirror {
	border: none;
	font-size: 100%;
	background: transparent;
	box-shadow: none !important;
	height: 100%;
	min-height: 100%;
	text-rendering: optimizeLegibility;
}
.CodeMirror.no-smooth {
	font-smooth: never;
	-webkit-font-smoothing: none;
}
.CodeMirror .cm-atom {
	font-style: italic;
}
.CodeMirror-gutters {
	background: transparent;
}

@media screen and (max-width: 56em) {
	.article-wrapper,
	form {
		width: 100%;
		height: 50vh;
		min-height: 50vh;
		float: none;
	}
}
@media screen and (max-width: 56em) and (max-height: 36em) {
	section.select-list .entry {
		padding: 0 1em;
	}
	footer p:first-of-type,
	footer p:first-of-type + p {
		display: none;
	}
}

